fixed ec-pop visibility bug

--- a/packages/style/select/_ec-select_default.scss
+++ b/packages/style/select/_ec-select_default.scss
@@ -1,6 +1,5 @@
 .ec-select {
   @extend %select;
-  position: relative;
 
   &.is-focus {
     &:after {
@@ -51,6 +50,7 @@
         color: getColor(link);
         display: flex;
         width: 100%;
+        padding: rem(8) rem(16);
 
         .ec-list-cell {
           padding: 0;
